--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.10.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.45.0",
+    "sass-loader": "^9.0.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.4.0"
   }
 }
